Fixed overflow issue and hover on mobile

--- a/client/css/App.css
+++ b/client/css/App.css
@@ -2,7 +2,6 @@
 
 body {
   background-color: white;
-  /* background-color: #cbea91; */
   text-align: center;
   margin: 0;
   font-family: 'Helvetica Neue', sans-serif;
@@ -40,19 +39,10 @@ input {
   box-sizing: border-box;
 }
 
-.column {
-  max-width: 1200px;
-  width: 100%;
-  height: 300vh;
-  position: fixed;
-  z-index: -100;
-  background-color: white;
-}
-
 .panel {
   max-width: 1200px;
   height: 100%;
-  min-height: 95vh;
+  min-height: 90vh;
   width: 100%;
   background-color: white;
   margin: 0 auto;
@@ -103,13 +93,6 @@ input[type=radio] {
   margin-right: 10px;
 }
 
-/* .buttons-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-} */
-
 .special {
   font-size: 1.2rem;
   text-transform: uppercase;
@@ -121,7 +104,7 @@ input[type=radio] {
   color: white;
   overflow: hidden;
   box-shadow: 0 2px 4px darkgray;
-  transition: scale 0.5s ease-in;
+  /* transition: all 2s ease-in; */
   z-index: 1;
   width: 20%;
   text-align: center;
@@ -141,8 +124,8 @@ input[type=radio] {
   z-index: 3;
   -webkit-animation-name: ripple;
   animation-name: ripple;
-  -webkit-animation-duration: 0.2s;
-  animation-duration: 0.2s;
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
   -webkit-animation-timing-function: ease-in;
   animation-timing-function: ease-in;
 }
@@ -208,7 +191,6 @@ input[type=radio] {
 }
 
 .forward-button {
-  /* border: 2px solid #82c410; */
   border-color: #52790f;
   background-color: #7bb417;
   font-weight: 700;
@@ -221,25 +203,24 @@ input[type=radio] {
   margin-bottom: 20px;
 }
 
-.forward-button:hover,
-.begin-button:hover {
-  background-color: #52790f;
-}
-
 .back-button {
   width: 40%;
   background: #DB7093;
   border-color: #b64c6f;
 }
 
-.back-button:hover {
-  background-color: #b64c6f;
+@media (hover: hover) {
+  .forward-button:hover,
+  .begin-button:hover {
+    background-color: #52790f;
+  }
+
+  .back-button:hover {
+    background-color: #b64c6f;
+  }
 }
 
-/* 
-.finish-button {
-  width: 90%;
-} */
+
 
 .signin-button {
   font-size: 20px;
@@ -312,6 +293,7 @@ input[type=radio] {
     display: flex;
     align-items: center;
     height: 150px;
+    justify-content: center;
   }
 
   .button p {
